--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stylelint": "stylelint ./src/styles/**/*.scss --syntax scss",
     "sass-watch": "node-sass --source-map-embed --watch --recursive styles/styles.scss styles/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass --watch ./styles/styles.scss ./styles/styles.css",
+    "sass": "node-sass --watch ./public/css/styles.scss ./public/css/styles.css",
     "start": "nodemon app.js",
     "dev": "concurrently npm:nodemon -w src/app.js app.js npm:sass:*",
     "sass:watch": "node-sass --source-map-embed --watch ./styles/styles.scss ./public/styles.css",
@@ -30,7 +30,7 @@
     "express-ejs-layouts": "^2.5.0",
     "fs": "0.0.1-security",
     "node-sass": "^5.0.0",
-    "sass": "^1.32.5"
+    "sass": "^1.32.6"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
