--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "[Kynning í fyrirlestri](https://youtu.be/pCEHnurbuCU).",
   "main": "app.js",
   "scripts": {
-    "eslint": "eslint ./src/**/*.mjs",
-    "stylelint": "stylelint ./src/styles/**/*.scss --syntax scss",
+    "eslint": "eslint ./src/**/*.js",
+    "lint-css": "stylelint ./public/css/**/*.scss --syntax scss",
+    "lint-css:fix": "npm run lint-css -- --fix",
     "sass-watch": "node-sass --source-map-embed --watch --recursive styles/styles.scss styles/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "node-sass --watch ./public/css/styles.scss ./public/css/styles.css",
@@ -44,8 +45,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
