--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "eslint": "eslint ./src/**/*.js",
     "lint-css": "stylelint ./public/css/**/*.scss --syntax scss",
     "lint-css:fix": "npm run lint-css -- --fix",
-    "sass-watch": "node-sass --source-map-embed --watch --recursive styles/styles.scss styles/styles.css",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass --watch ./public/css/styles.scss ./public/css/styles.css",
-    "start": "nodemon app.js",
-    "dev": "concurrently npm:nodemon -w src/app.js app.js npm:sass:*",
-    "sass:watch": "node-sass --source-map-embed --watch ./styles/styles.scss ./public/styles.css",
-    "nodemon": "nodemon ./src/app.js"
+    "sass": "node-sass ./public/css/styles.scss ./public/css/styles.css",
+    "sass-watch": "node-sass --watch ./public/css/styles.scss ./public/css/styles.css",
+    "start": "npm run sass && npm run nodemon",
+    "dev": "concurrently npm:sass-watch npm:nodemon",
+    "test": "npm run lint-css && npm run eslint",
+    "nodemon": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -36,15 +35,19 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "eslint": "^7.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-ejs": "0.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
