--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,32 @@
 {
-    "extends": ["airbnb","prettier","plugin:node/recommended"],
-    "plugins": ["prettier"],
+    "extends": ["airbnb","prettier","plugin:node/recommended","eslint:recommended", "plugin:react/recommended"],
+    "plugins": ["prettier","react"],
     "rules": {
         "prettier/prettier": ["error", {
             "endOfLine":"auto"
-          }],
+        }],
+        "comma-dangle": 0,
+        "react/jsx-uses-vars": 1,
+        "react/display-name": 1,
+        "no-unused-vars": "warn",
+        "no-console": 1,
+        "no-unexpected-multiline": "warn",
         "import/no-dynamic-require": "warn"
+    },
+    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true,
+            "modules": true,
+            "experimentalObjectRestSpread": true
+        }
+    },
+    "settings": {
+        "react": {
+            "pragma": "React",
+            "version": "15.6.1"
+        }
     }
 }
